<resources>
    <string name="app_name">Bus Tracker</string>
    <string name="search_stop">Search Stop #</string>
    <string name="favourite_icon">Favourite icon</string>
    <string name="stopno">stopNo</string>
    <string name="stopcity">stopCity</string>
    <string name="stoproute">stopRoute</string>
    <string name="stopname">stopName</string>
    <string name="button">Button</string>
    <string name="eg_59316">eg. 59316</string>
    <string name="my_list">My List</string>
</resources>