<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="2dp">

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="277dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stopRowName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:text="@string/stopname"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stopRowRoute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:text="@string/stoproute"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/stopRowCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="30dp"
                android:text="@string/stopcity"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stopRowNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stopno"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:id="@+id/stopFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favourite_icon"
                app:srcCompat="@android:drawable/btn_star_big_on" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>